--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollin",
+  "name": "repirate",
   "version": "0.1.0",
   "private": true,
   "description": "A create-react-app template with tailwind",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
